src/objects/StudentAcademicCourseAttempt__c.object
<CustomObject>
    <description>Represents an attempt against a specific assessment or task of a course.</description>
    <fields>
        <fullName>AssessmentTaskCode__c</fullName>
        <label>Assessment / Task Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attempted__c</fullName>
        <description>The date and time, this attempt was made on a required component of the course.</description>
        <inlineHelpText>The date and time, this attempt was made on a required component of the course.</inlineHelpText>
        <label>Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompositeKey__c</fullName>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FullTitle__c</fullName>
        <description>The full title for the assessment / task that may have been cut off by the 80 character name limit on this object.</description>
        <label>Full Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentAcademicCourse__c</fullName>
        <label>Student Academic Course</label>
        <referenceTo>StudentAcademicCourse__c</referenceTo>
        <relationshipLabel>Student Academic Course Attempts</relationshipLabel>
        <relationshipName>StudentAcademicCourseAttempts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Student Academic Course Attempt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CompositeKey__c</columns>
        <columns>StudentAcademicCourse__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment / Task Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Academic Course Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>